<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Find 5 Parts</string>
    <string name="category_gestures_title">Off screen gestures</string>
    <string name="double_tap_wake_title_head">Double tap to wake</string>
    <string name="double_tap_wake_summary_head">Double tap on screen will wake the device</string>
    <string name="camera_title_head">Camera</string>
    <string name="camera_summary_head">Draw a circle to start camera</string>
    <string name="music_title_head">Music</string>
    <string name="music_summary_head">Draw II, &lt; or > to control music playback</string>
    <string name="torch_title_head">Torch</string>
    <string name="torch_summary_head">Draw a V to toggle torch</string>
    <string name="category_engineeringmode">Engineering Mode</string>
    <string name="engineeringmode_title_head">Setup</string>
    <string name="engineeringmode_summary_head">Configure Engineering Mode support</string>
    <string name="sound_effect_category">Sound Effect</string>
    <string name="dolby_effect_title">Dolby</string>
    <string name="dolby_effect_on_summary">Dolby On</string>
    <string name="dolby_effect_off_summary">Dolby Off</string>
    <string name="dirac_effect_title">Dirac Effect</string>
    <string name="dirac_effect_summary">When headphones are plugged effective</string>
    <string name="category_author">author</string>
    <string name="author_title_head">wuxianlin</string>
    <string name="author_summary_head">weibo:wuxianlin000000</string>
</resources>
